--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Finder PWA</title>
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    
     <link rel="stylesheet" href="style.css">
+
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -47,8 +50,7 @@
                 <button id="view-all-btn">View All on Map 🗺️</button>
                 <button id="download-data-btn">Download Data 📥</button>
             </div>
-            <div id="shop-details" class="shop-details-container">
-                </div>
+            <div id="shop-details" class="shop-details-container"></div>
             <div id="map" class="map-container"></div>
         </div>
     </div>
