--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     // 1) Replace SHEET_CSV_URL with your published CSV URL
     // 2) Optionally set DEFAULT_CENTER (lat, lng) for Yangon or your area
     window.CONFIG = {
-      SHEET_CSV_URL: "REPLACE_WITH_PUBLISHED_CSV_URL",
+      SHEET_CSV_URL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQUyjM9WjlMz2-T9d2rDQJV65gWL7swVtDAkg-ODkzonKOjnuykUKr2NlmGN0zqp35sYulYYJLmoUo6/pub?output=csv",
       DEFAULT_CENTER: [16.8409, 96.1735], // Yangon center
       DEFAULT_ZOOM: 12
     };
