--- a/index.html
+++ b/index.html
@@ -1,154 +1,87 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shop Explorer</title>
+  <title>Shop Data Viewer</title>
 
-  <!-- App theme -->
-  <meta name="theme-color" content="#3b82f6" />
+  <!-- Allow fetch to Google Sheets -->
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self';
+                 connect-src 'self' https://docs.google.com https://*.googleusercontent.com;
+                 img-src 'self' data: https://*.googleusercontent.com;
+                 script-src 'self';
+                 style-src 'self' 'unsafe-inline'">
 
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="icon" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" href="icons/icon-192.png" />
-
-  <!-- Leaflet -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-    defer
-  ></script>
-
-  <link rel="stylesheet" href="styles.css" />
-  <script>
-    // === CONFIG ===
-    // 1) Replace SHEET_CSV_URL with your published CSV URL
-    // 2) Optionally set DEFAULT_CENTER (lat, lng) for Yangon or your area
-    window.CONFIG = {
-      SHEET_CSV_URL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQUyjM9WjlMz2-T9d2rDQJV65gWL7swVtDAkg-ODkzonKOjnuykUKr2NlmGN0zqp35sYulYYJLmoUo6/pub?output=csv",
-      DEFAULT_CENTER: [16.8409, 96.1735], // Yangon center
-      DEFAULT_ZOOM: 12
-    };
-  </script>
-  <script src="app.js" type="module" defer></script>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      margin: 0;
+      padding: 1rem;
+      background: #f2f4f8;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+    h1 {
+      margin: 0;
+      font-size: 1.4rem;
+    }
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 0.9rem;
+      background: #0366d6;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #024ea1;
+    }
+    #status {
+      margin-bottom: 1rem;
+      font-size: 0.9rem;
+    }
+    .card {
+      background: #fff;
+      padding: 0.75rem;
+      margin-bottom: 0.75rem;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+    }
+    .rating-high {
+      border-left: 6px solid #28a745;
+    }
+    .rating-medium {
+      border-left: 6px solid #ff9800;
+    }
+    .rating-low {
+      border-left: 6px solid #dc3545;
+    }
+    .group {
+      margin-bottom: 1rem;
+    }
+    .group h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.1rem;
+      background: #e0e7ef;
+      padding: 0.3rem 0.5rem;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
-  <div id="app" class="layout">
-    <aside class="sidebar">
-      <div class="app-brand">
-        <div class="logo">🗺️</div>
-        <div class="brand">
-          <h1>Shop Explorer</h1>
-          <p>Data from Google Sheets</p>
-        </div>
-      </div>
+  <header>
+    <h1>Shop Data Viewer</h1>
+    <button id="toggleViewBtn">Group by Rating</button>
+  </header>
+  <div id="status">Loading…</div>
+  <div id="output"></div>
 
-      <div class="search-bar">
-        <input id="searchInput" type="text" placeholder="Search shops..." />
-      </div>
-
-      <button id="allShopsBtn" class="nav-item active">All Shops</button>
-      <div id="shopList" class="shop-list" aria-label="Shop list"></div>
-
-      <footer class="sidebar-footer">
-        <button id="installBtn" class="ghost">Install App</button>
-      </footer>
-    </aside>
-
-    <main class="main">
-      <header class="toolbar">
-        <div class="left">
-          <button id="filterBtn" class="chip">
-            ⭐ Rating Filter
-          </button>
-          <button id="groupBtn" class="chip">
-            🧩 Group by Rating
-          </button>
-        </div>
-        <div class="right">
-          <button id="viewAllBtn" class="pill solid">View all</button>
-          <button id="downloadBtn" class="pill">Download data</button>
-        </div>
-      </header>
-
-      <section id="content" class="content">
-        <!-- Dynamic: map view or detail view -->
-        <div id="mapView" class="map-view">
-          <div id="map" class="map"></div>
-          <div id="legend" class="legend"></div>
-        </div>
-
-        <div id="detailView" class="detail-view hidden">
-          <div class="detail-card">
-            <div class="detail-header">
-              <img id="detailImage" alt="" />
-              <div>
-                <h2 id="detailName"></h2>
-                <div id="detailRating" class="rating"></div>
-                <div id="detailCategory" class="meta"></div>
-              </div>
-            </div>
-            <div class="detail-body">
-              <p id="detailAddress"></p>
-              <p id="detailPhone"></p>
-              <p id="detailDescription"></p>
-            </div>
-          </div>
-          <div class="detail-map">
-            <div id="detailMap" class="map small"></div>
-            <button id="backToList" class="pill">Back to All Shops</button>
-          </div>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <!-- Filter dialog -->
-  <dialog id="filterDialog">
-    <form method="dialog" class="dialog-card">
-      <h3>Filter by rating</h3>
-      <p>Select minimum rating to include.</p>
-      <div class="options">
-        <label><input type="radio" name="minRating" value="0" checked /> Any</label>
-        <label><input type="radio" name="minRating" value="5" /> 5★</label>
-        <label><input type="radio" name="minRating" value="4" /> 4★+</label>
-        <label><input type="radio" name="minRating" value="3" /> 3★+</label>
-        <label><input type="radio" name="minRating" value="2" /> 2★+</label>
-        <label><input type="radio" name="minRating" value="1" /> 1★+</label>
-      </div>
-      <menu>
-        <button value="cancel">Cancel</button>
-        <button value="apply" class="solid">Apply</button>
-      </menu>
-    </form>
-  </dialog>
-
-  <!-- Group dialog -->
-  <dialog id="groupDialog">
-    <form method="dialog" class="dialog-card">
-      <h3>Group by rating</h3>
-      <p>Select rating groups to show on the map.</p>
-      <div class="options">
-        <label><input type="checkbox" name="groups" value="5" checked /> 5★</label>
-        <label><input type="checkbox" name="groups" value="4" checked /> 4★</label>
-        <label><input type="checkbox" name="groups" value="3" checked /> 3★</label>
-        <label><input type="checkbox" name="groups" value="2" checked /> 2★</label>
-        <label><input type="checkbox" name="groups" value="1" checked /> 1★</label>
-        <label><input type="checkbox" name="groups" value="0" checked /> unrated</label>
-      </div>
-      <menu>
-        <button value="cancel">Cancel</button>
-        <button value="apply" class="solid">Apply</button>
-      </menu>
-    </form>
-  </dialog>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
