--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     defer
   ></script>
 
-  <script src="app.js" type="module" defer></script>
+  <script src="main.js" type="module" defer></script>
 </head>
 <body>
   <!-- The rest of the HTML structure is exactly as in the first version I sent you -->
