--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   />
 
   <!-- App Styles -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <script>
     window.CONFIG = {
@@ -39,7 +39,7 @@
     defer
   ></script>
 
-  <script src="main.js" type="module" defer></script>
+  <script src="./main.js" type="module" defer></script>
 </head>
 <body>
   <!-- The rest of the HTML structure is exactly as in the first version I sent you -->
